- https://github.com/eclipse-sirius/sirius-components/issues/914[#914] [diagram] Add the graphical selection to the semantic ones while clicking on diagram elements
- https://github.com/eclipse-sirius/sirius-components/issues/925[#925] [diagram] Perform a fit to screen after the first render of a diagram

=== Bug fixes

- [compatibility] Fix a potential NPE in logging code of the `WidgetDescriptionConverter`
- [form] Handle invalid format more gracefully when editing numeric properties
- [view] Fix the canonical domain-based edge creation tool
- https://github.com/eclipse-sirius/sirius-components/issues/377[#377] [workbench] Restore the real time feedback on representation renaming
- https://github.com/eclipse-sirius/sirius-components/issues/868[#868] [diagram] Fix a layout issue with the label of the newly created edges
- https://github.com/eclipse-sirius/sirius-components/issues/746[#746] [core] Keep representations in memory for 5 more seconds when they should be disposed in order to have the time to receive some input before their disposal
- https://github.com/eclipse-sirius/sirius-components/issues/425[#425] [diagram] Fix a layout issue with self-loop edge

== v2021.12.0

=== Architectural decision records

- [ADR-032] Relax our ID policy for editing context and representation (update)
- [ADR-034] Switch from semver to calver
- [ADR-035] Use a common pattern for configuration properties
- [ADR-036] Adopt a more structured selection

=== Deprecation warning
